--- a/DentalClinicManagementApp/Views/ProfessionalRoles/Index.cshtml
+++ b/DentalClinicManagementApp/Views/ProfessionalRoles/Index.cshtml
@@ -14,7 +14,7 @@
 <h1>@SharedLocalizer["Roles"]</h1>
 
 <p>
-    <h6 align="right"><a asp-action="Create" class="btn btn-dark">@SharedLocalizer["Create new"]</a></h6>
+    <h6 align="right"><a asp-action="Create" class="btn btn-dark">@SharedLocalizer["Create New"]</a></h6>
 </p>
 
 
