--- a/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
+++ b/DentalClinicManagementApp/Views/Invoices/Edit.cshtml
@@ -14,13 +14,13 @@
             <input type="hidden" name="ClientID" value="0" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="State" value="false" />
             <div class="form-group">
                 <label asp-for="InvoiceNumber" class="control-label"></label>
                 <input asp-for="InvoiceNumber" class="form-control" disabled/>
                 <span asp-validation-for="InvoiceNumber" class="text-danger"></span>
                 <input type="hidden" asp-for="InvoiceNumber" />
             </div>
-
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -31,10 +31,10 @@
                 <input type="number" asp-for="FinalValue" class="form-control" />
                 <span asp-validation-for="FinalValue" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="State" /> @Html.DisplayNameFor(model => model.State)
-                </label>
+            <div class="form-group">
+                <label asp-for="PaymentDate" class="control-label"></label>
+                <input asp-for="PaymentDate" class="form-control" />
+                <span asp-validation-for="PaymentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MedicalAppointmentID" class="control-label"></label>
