--- a/DentalClinicManagementApp/Views/Professionals/Index.cshtml
+++ b/DentalClinicManagementApp/Views/Professionals/Index.cshtml
@@ -70,11 +70,19 @@
                             }
                             else
                             {
-                                <span>-</span>
-                            }
+                            <span>-</span>
                         }
-                    </td>
-                    <td>
+                    }
+                </td>
+                <td>
+                    @if (item.SpecialityID.HasValue)
+                    {
+                        <a asp-action="HitoryAppointments" asp-route-id="@item.ID">@SharedLocalizer["History of medical appointments"]</a> <span>|</span>
+                        <a asp-action="FutureAppointments" asp-route-id="@item.ID">@SharedLocalizer["Future medical appointments"]</a>
+                       <br />
+                    }
+                    
+                    
                         <partial name="_CRUD_actions" model="item.ID" />
                     </td>
                 </tr>
