--- a/DentalClinicManagementApp/Views/_ViewImports.cshtml
+++ b/DentalClinicManagementApp/Views/_ViewImports.cshtml
@@ -3,6 +3,8 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @using NonFactors.Mvc.Grid; @*MVC grid*@
 
+@*For roles*@
+@using DentalClinicManagementApp.Lib;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
